as-is refactor on JavaOpenBankingCodegen